--- a/.github/workflows/sync_to_algorithm.yml
+++ b/.github/workflows/sync_to_algorithm.yml
@@ -37,12 +37,5 @@ jobs:
                   git subtree pull --prefix=code_tree codetree main
 
             # (4) 변경이 있을 때만 push
-            - name: Push if changed
-              run: |
-                  if git diff --quiet && git diff --cached --quiet; then
-                    echo "No changes to push."
-                    exit 0
-                  fi
-
-                  # subtree pull이 커밋을 만들긴 하지만, 안전하게 한 번 더 확인
-                  git push origin main
+            - name: Push
+              run: git push origin main
